# sofie

./: Cargo.toml  README.md
docs/: _config.yml  index.md  llms.txt
examples/jsonmock/: Cargo.toml  sofie.toml
examples/jsonmock/src/: main.rs
src/: config.rs  errors.rs  lib.rs
src/tests/: app.rs  error.rs  handler.rs  mod.rs  sophia.rs
