[package]
name = "sofie"
version = "0.0.2"
edition = "2021"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
repository = "https://github.com/ararog/sofie"
homepage = "https://github.com/ararog/sofie"
description = "🌟 The elegant full-stack web framework that makes Rust web development effortless"
readme = "README.md"
license = "MIT"
keywords = ["framework", "backend", "rest-server", "rest"]
publish = true
rust-version = "1.64.0"

[dependencies]
bytes = "1.11.0"
clap = { version = "4.5.55", features = ["derive"] }
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["server"] }
hyper-util = "0.1.19"
log = "0.4.29"
thiserror = "2.0.18"
vetis = "0.1.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
